--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
     "name": "editx-frontend",
     "version": "1.0.0",
-    "type": "module",
+    "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
+      "dev": "vite",
+      "build": "npx vite build && cp _redirects dist/",
+      "preview": "vite preview"
     },
     "dependencies": {
-        "axios": "^1.6.2",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.15.0"
+      "axios": "^1.6.7",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "react-router-dom": "^6.22.3"
     },
     "devDependencies": {
-        "@vitejs/plugin-react": "^4.4.0",
-        "autoprefixer": "^10.4.21",
-        "postcss": "^8.5.3",
-        "tailwindcss": "^3.4.17",
-        "vite": "^5.4.18"
+      "@vitejs/plugin-react": "^4.2.1",
+      "vite": "^5.2.8"
     }
-}
+  }
+  
