--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-    "name": "editx-frontend",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-      "dev": "vite",
-      "build": "npx vite build && cp _redirects dist/",
-      "preview": "vite preview"
-    },
-    "dependencies": {
-      "axios": "^1.6.7",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-router-dom": "^6.22.3"
-    },
-    "devDependencies": {
-      "@vitejs/plugin-react": "^4.2.1",
-      "vite": "^5.2.8"
-    }
+  "name": "editx-frontend",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "npx --yes vite build && cp _redirects dist/",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "axios": "^1.6.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.2.8"
   }
-  
+}
