--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "./node_modules/.bin/vite build && cp _redirects dist/",
+    "build": "node --import vite/register build && cp _redirects dist/",
     "preview": "vite preview"
   },
   "dependencies": {
