fix: skip chmod locally but keep it for Render

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "node --import vite/register build && cp _redirects dist/",
-    "preview": "vite preview"
+    "build": "vite build && cp _redirects dist/",
+    "preview": "vite preview",
+    "postinstall": "chmod +x node_modules/.bin/vite"
   },
   "dependencies": {
     "axios": "^1.6.7",
