--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "postinstall": "chmod +x node_modules/.bin/vite || true"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.6.7",
